--- a/2.微信.md
+++ b/2.微信.md
@@ -1,9 +1,9 @@
-## 2.微信（没有公众号）
+### 2.微信（没有公众号）
 
 ![图片](./image/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.025.png)
 
-根据微信小程序审核标准需要提交：
+**根据微信小程序审核标准需要提交：**
 
-**《非经营性互联网信息服务备案核准》**
+《非经营性互联网信息服务备案核准》
 
-**《企业营业执照》电子版加盖公章**
+《企业营业执照》电子版加盖公章
