--- a/产品介绍.md
+++ b/产品介绍.md
@@ -1,6 +1,47 @@
-###产品介绍
+### 产品介绍
 
 **专门为游戏开发者/发行商研发的整套私域化社区运营系统。**
 **通过游种Pro系统把微信群，QQ群，微信公众号，头条系，百度贴吧，taptap，哔哩哔哩等渠道用户聚合并变为自己的私域化永久用户**
 
 ![图片](./image/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.001.png)
+
+
+
+
+
+##### 开通游种圈子Pro账号**需要准备的材料：**
+
+**1.公司资料：**
+
+《企业营业执照》电子版
+
+**2.运营者信息：**
+
+身份证姓名和身份证号码
+
+手机号、密码（建议和运营公众平台一致统一管理）
+
+##### **注册各运营平台账号前需要准备的材料：**
+
+**1.公司资料：**
+
+《非经营性互联网信息服务备案核准》
+
+《企业营业执照》电子版加盖公章
+
+**2.运营者信息：**
+
+身份证姓名和身份证号码
+
+手机号
+
+一个用于验证的微信号、QQ号
+
+
+**微信平台有两种情况：**
+
+1.有微信公众号**(推荐)**（注册流程详见1）
+
+2.没有公众号（注册流程详见2）
+
+有公众号注册小程序需要保持公众号与小程序的主体一致，不一致的话后续提交审核会出现问题，需要更改主体流程繁琐且时间长
