--- a/2.6创建游戏圈填写基本信息.md
+++ b/2.6创建游戏圈填写基本信息.md
@@ -2,6 +2,6 @@
 
 [![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.013.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.013.png)
 
-游戏圈基本信息建立后创建1-2个话题（虽然还没上线，但在小程序提交审核时有丰富的内容更容易通过）
+游戏圈基本信息建立后创建1-2个话题（虽然还没上线，但在小程序提交审核时有丰富的内容更容易通过）。
 
 [![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.014.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.014.png)
