--- a/3.4填写公司信息.md
+++ b/3.4填写公司信息.md
@@ -1,5 +1,7 @@
 #### 3.4 填写公司信息
 
-**需要准备资料：清晰的企业营业执照电子版**
+**需要准备资料：**
+
+清晰的企业营业执照电子版
 
 [![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.038.jpeg "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.038.jpeg)
