--- a/1.6授权管理.md
+++ b/1.6授权管理.md
@@ -4,51 +4,12 @@
 
 [![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.015.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.015.png)
 
-配置域名：（后期会随添加/更新）
+【点击授权微信小程序】---【管理员扫码】
 
-**request合法域名：** 
+[![图片](http://qrs.3l7c.com/shareyou/doc/pro/1.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/1.png)
 
-https://apimp.3l7c.com
+【选择需要授权的小程序】---【授权】
 
-https://log.aldwx.com
- 
-**socket合法域名： **
+[![图片](http://qrs.3l7c.com/shareyou/doc/pro/2.jpg "图片")](http://qrs.3l7c.com/shareyou/doc/pro/2.jpg)
 
-wss:://apimp.3l7c.com
- 
-**uploadFile合法域名：** 
-
-https://apimp.3l7c.com
-
-https://up-z1.qiniup.com
-
-https://up-z2.qiniup.com
-
-https://up.qiniup.com
- 
-**downloadFlie合法域名：** 
-
-https://qrss.3l7c.com
-
-https://wx.qlogo.cn
-
-### 将配置域名复制到微信后台
-
-【[打开微信后台](https://mp.weixin.qq.com)】---【开发】---【开发设置】
-
-[![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.016.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.016.png)
-
-第三步：这一步需要填写2个字段“AppID”，“AppSecret”
-
-【登录微信公众平台】---【开发】---【开发设置】
-
-[![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.017.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.017.png)
-
-第四步：配置业务域名
-【登录微信公众平台】---【开发】---【业务域名】---【开始配置】---【下载校验文件】---【返回游种圈子后台】----【提交txt文件】---【授权】
-
-[![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.018.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.018.png)
-
-[![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.019.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.019.png)
-
-[![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.020.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.020.png)
+[![图片](http://qrs.3l7c.com/shareyou/doc/pro/3.jpg "图片")](http://qrs.3l7c.com/shareyou/doc/pro/3.jpg)
