--- a/1.4登录游种圈子Pro建立游戏的私域圈.md
+++ b/1.4登录游种圈子Pro建立游戏的私域圈.md
@@ -2,4 +2,4 @@
 
 在管理后台输入账号与密码进入虾游圈子（目前在邀请阶段，账号与密码均为自动分配，账号为手机号，这里可提供创建小程序时填写的手机号，方便管理）。
 
-虾游圈子Pro后台地址：[http://mp.3l7c.com](http://mp.3l7c.com/)
+虾游圈子Pro后台地址：[http://mp.gameseed.cn](http://mp.gameseed.cn/)
