--- a/3.10授权管理.md
+++ b/3.10授权管理.md
@@ -2,21 +2,39 @@
 
 选择授权QQ小程序
 
-[![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.015.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.015.png)
+[![图片](http://qrs.gameseed.cn/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.015.png "图片")](http://qrs.gameseed.cn/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.015.png)
 
 **request合法域名：** 
 
 https://apimp.3l7c.com
 
+https://apimp.gameseed.cn
+
 https://log.aldwx.com
+
+https://mp2btest.3l7c.com
+
+https://mp2btest.gameseed.cn
  
 **socket合法域名： **
 
-wss:://apimp.3l7c.com
+wss://apimp.3l7c.com
+
+wss://apimp.gameseed.cn
+
+wss://mp2btest.3l7c.com
+
+wss://mp2btest.gameseed.cn
  
 **uploadFile合法域名：** 
-
+	
 https://apimp.3l7c.com
+
+https://apimp.gameseed.cn
+
+https://mp2btest.3l7c.com
+
+https://mp2btest.gameseed.cn
 
 https://up-z1.qiniup.com
 
@@ -25,8 +43,16 @@ https://up-z2.qiniup.com
 https://up.qiniup.com
  
 **downloadFlie合法域名：** 
+	
+https://alipayobjects.com
+
+https://mp2btest.3l7c.com
+
+https://mp2btest.gameseed.cn
 
 https://qrss.3l7c.com
+
+https://qrss.gameseed.cn
 
 https://wx.qlogo.cn
 
@@ -36,14 +62,14 @@ https://wx.qlogo.cn
 
 填写信息
 
-[![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.041.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.041.png)
+[![图片](http://qrs.gameseed.cn/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.041.png "图片")](http://qrs.gameseed.cn/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.041.png)
 
 确认填写
 
-[![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.042.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.042.png)
+[![图片](http://qrs.gameseed.cn/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.042.png "图片")](http://qrs.gameseed.cn/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.042.png)
 
 得到AppID
 
 可以在设置-开发设置页面中查看AppID和密钥，配置服务器域名
 
-[![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.043.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.043.png)
+[![图片](http://qrs.gameseed.cn/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.043.png "图片")](http://qrs.gameseed.cn/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.043.png)
