--- a/4.11授权管理.md
+++ b/4.11授权管理.md
@@ -2,7 +2,7 @@
 
 选择授权字节跳动小程序
 
-[![图片](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.015.png "图片")](http://qrs.3l7c.com/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.015.png)
+[![图片](http://qrs.gameseed.cn/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.015.png "图片")](http://qrs.gameseed.cn/shareyou/doc/pro/6feb8257-d0e5-4d27-a43d-ca0de967ecf9.015.png)
 
 配置域名：
 
@@ -10,15 +10,33 @@
 
 https://apimp.3l7c.com
 
+https://apimp.gameseed.cn
+
 https://log.aldwx.com
+
+https://mp2btest.3l7c.com
+
+https://mp2btest.gameseed.cn
  
 **socket合法域名： **
 
-wss:://apimp.3l7c.com
+wss://apimp.3l7c.com
+
+wss://apimp.gameseed.cn
+
+wss://mp2btest.3l7c.com
+
+wss://mp2btest.gameseed.cn
  
 **uploadFile合法域名：** 
-
+	
 https://apimp.3l7c.com
+
+https://apimp.gameseed.cn
+
+https://mp2btest.3l7c.com
+
+https://mp2btest.gameseed.cn
 
 https://up-z1.qiniup.com
 
@@ -27,8 +45,16 @@ https://up-z2.qiniup.com
 https://up.qiniup.com
  
 **downloadFlie合法域名：** 
+	
+https://alipayobjects.com
+
+https://mp2btest.3l7c.com
+
+https://mp2btest.gameseed.cn
 
 https://qrss.3l7c.com
+
+https://qrss.gameseed.cn
 
 https://wx.qlogo.cn
 
